# dds_project

./: CMakeLists.txt  Project_Description.md  README.md
examples/: example.cpp
include/: dds.h  safedds.h
src/: safedds.cpp
tests/: CMakeLists.txt  test_safe_dds.cpp
